sfdc-integration-accelerator/src/objects/MuleIntegrationEvent__e/MuleIntegrationEvent__e.object-meta.xml
<CustomObject>
    <description>MuleSoft event driven architecture integrations</description>
    <label>Mule Integration Event</label>
    <pluralLabel>MuleIntegrationEvent</pluralLabel>
</CustomObject>