sfdc-integration-accelerator/src/objects/MuleIntegrationEvent__e/fields/MuleEventQueueId__c.field-meta.xml
<CustomField>
    <fullName>MuleEventQueueId__c</fullName>
    <description>MuleEventQueue__c Id related to the Platform Event. The object MuleEventQueue__c is the responsible for logging and operating all integrations life-cycle.</description>
    <label>MuleEventQueueId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>