sfdc-integration-accelerator/src/objects/MuleIntegrationEvent__e/fields/MuleIntegrationName__c.field-meta.xml
<CustomField>
    <fullName>MuleIntegrationName__c</fullName>
    <description>Integration name is a constant used in the platform events integration accelerator</description>
    <label>MuleIntegrationName</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>