sfdc-integration-accelerator/src/objects/MuleIntegrationEvent__e/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>Payload that will be sent on Event publishing</description>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>